syntax = "proto3";

package auth;

service AuthService {
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
}

message ValidateTokenRequest {
  string accessToken = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string userId = 2;
  string email = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
}
